--- a/deploy.yml
+++ b/deploy.yml
@@ -37,3 +37,5 @@ spec:
             value: "30|70|General-ASG|eu-west-1;40|60|GPU-ASG|eu-west-1"
           - name: SLACK_HOOK
             value: SLACK_HOOK
+          - name: ROTATE_NODES
+            value: "2"
