--- a/deploy.yml
+++ b/deploy.yml
@@ -34,6 +34,8 @@ spec:
           - name: INTERVAL
             value: "120"
           - name: AUTOSCALING
-            value: "30|70|General-ASG|eu-west-1;40|60|GPU-ASG|eu-west-1"
+            value: >
+              30|70|General-ASG|Group=General|eu-west-1;
+              40|60|GPU-ASG|Group=Research,GroupType=GPU|eu-west-1
           - name: SLACK_HOOK
             value: SLACK_HOOK
