--- a/deploy-autoscaler.yml
+++ b/deploy-autoscaler.yml
@@ -1,3 +1,38 @@
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  name: k8s-aws-autoscaler
+rules:
+  - apiGroups: ["*"]
+    resources: ["nodes", "pods", "replicasets", "daemonsets"]
+    verbs: ["get", "list"]
+  - apiGroups: ["*"]
+    resources: ["nodes"]
+    verbs: ["update"]
+  - apiGroups: ["*"]
+    resources: ["pods/eviction"]
+    verbs: ["create"]
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: k8s-aws-autoscaler
+  namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: k8s-aws-autoscaler
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: k8s-aws-autoscaler
+subjects:
+- kind: ServiceAccount
+  name: k8s-aws-autoscaler
+  namespace: kube-system
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -9,19 +44,13 @@ spec:
     metadata:
       labels:
         app: k8s-aws-autoscaler
-      annotations:
-        scheduler.alpha.kubernetes.io/tolerations: |
-          [
-            {
-              "key": "dedicated",
-              "operator": "Equal",
-              "value": "master",
-              "effect": "NoSchedule"
-            }
-          ]
     spec:
       nodeSelector:
         kubernetes.io/role: master
+      tolerations:
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/master
+      serviceAccountName: k8s-aws-autoscaler
       containers:
       - name: k8s-aws-autoscaler
         image: onfido/k8s-aws-autoscaler
