--- a/deploy-rotate-cron.yml
+++ b/deploy-rotate-cron.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: batch/v2alpha1
 kind: CronJob
 metadata:
@@ -11,20 +12,14 @@ spec:
       template:
         metadata:
           name: k8s-rotate-nodes
-          annotations:
-            scheduler.alpha.kubernetes.io/tolerations: |
-              [
-                {
-                  "key": "dedicated",
-                  "operator": "Equal",
-                  "value": "master",
-                  "effect": "NoSchedule"
-                }
-              ]
         spec:
           nodeSelector:
             kubernetes.io/role: master
+          tolerations:
+          - effect: NoSchedule
+            key: node-role.kubernetes.io/master
           restartPolicy: OnFailure
+          serviceAccountName: k8s-aws-autoscaler
           containers:
             - name: k8s-rotate-nodes
               image: onfido/k8s-aws-autoscaler
